...
                        .textFieldStyle(RoundedBorderTextFieldStyle())
                }
                .padding(.top, 15)
                
                Spacer()
            }
            .navigationBarTitle("Add", displayMode: .inline)
            .navigationBarItems(
                trailing: Button(action: {
                    saveButtonAction()
                }) {
                    Text("Save")
                }
            )
            .padding(.horizontal, 10)
            .alert(isPresented: $showAlert) {
                // Alert for displaying error messages
                Alert(title: Text("Error"), message: Text(alertMessage), dismissButton: .default(Text("OK")))
...
