// Constants.swift

import Foundation

struct Constants {
    // MARK: - UserDefaultsKeys
    
    struct UserDefaultsKeys {
        static let garments = "garments"
    }
    // MARK: - AlertMessages
    
    struct AlertMessages {
        static let emptyName = "Garment name cannot be empty."
        static let duplicateName = "A garment with the same name already exists."
        static let enterName = "Enter garment name"
    }
    // MARK: - Placeholders
    
    struct Placeholders {
        static let enterName = "Enter garment name"
    }
    
}
